# yalom

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.oracle.yml  docker-compose.yml  examples  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
aws/: .gitignore  ARCHITECTURE.md  README.md  TESTING.md  build.sh  deploy.sh  n  test_ingestion_local.py  test_query_local.py
aws/lambda_ingestion/: handler.py  requirements.txt
aws/lambda_query/: handler.py  requirements.txt
docs/: AWS_DEPLOYMENT_COMPLETE.md  AWS_GCP_DEPLOYMENT.md  CONFIGURATION.md  GITHUB_FREE_SOLUTION.md  GROQ_CHANGES.md  GROQ_INTEGRATION.md  GROQ_SETUP.md  KAGGLE_DATASET_GUIDE.md  KAGGLE_QUICKSTART.md  OLLAMA_SETUP.md  PROMPT_VERSIONING.md  QUERY_REWRITING.md  QUICKSTART_TAPESEARCH.md  SIMILARITY_FILTERING.md  STRUCTURE.md  TAPESEARCH_README.md  VECTORIZATION_SETUP.md  VECTOR_STORE_ARCHITECTURE.md  WEB_UI.md
migrations/: migrate_to_transcript_id.py  migrate_use_title_for_dedup.py
scripts/: chat_cli.py  check_titles.py  clean_timestamps.py  cli.py  export_postgres_to_s3.py  ingest_s3_to_pinecone_local.py  populate_vector_db.py  setup_oracle_cloud.sh  start_groq.sh  view_prompts.py
src/: __init__.py  config.py  embedding_service.py
tests/: conftest.py  test_groq_integration.py  test_multilingual.py  test_prompts.py  test_query_rewriting.py  test_rag.py  test_safety.py  test_similarity_filtering.py  test_translation_flow.py  test_vector_store_factory.py  test_vectorization.py
utils/: check_duplicates.py  download_kaggle.py
(+44 files in other folders)
